# dns

./: AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  dns_rule_engine_policy_spec.json  main.rs  mcp.rs  ops.rs  secure.rs
.github/: dependabot.yml
.github/workflows/: rust.yml
caching/: base.rs  mod.rs  moka.rs  redis.rs
config/: mod.rs  tests.rs
forwarder/: authoritative.rs  mod.rs  runtime.rs  tests.rs  zones.rs
logging/: config.rs  edns.rs  hasher.rs  mod.rs  pipeline.rs  policy.rs  types.rs
policy/: compile.rs  facts.rs  mod.rs
src/: dnscrypt.rs  main.rs  mcp.rs  ops.rs  secure.rs  server.rs
src/caching/: base.rs  mod.rs  redis.rs
src/config/: hpke.rs  mod.rs  tests.rs
src/dns/: error.rs  header.rs  message.rs  mod.rs  name.rs  question.rs  record.rs  request.rs  types.rs  wire.rs
src/dns/record/: a.rs  aaaa.rs  caa.rs  cname.rs  dnskey.rs  ds.rs  https.rs  mx.rs  nsec.rs  rrsig.rs  soa.rs  srv.rs  svcb.rs  txt.rs  unknown.rs
src/forwarder/: authoritative.rs  mod.rs  recursive.rs  runtime.rs  tests.rs  zones.rs
src/forwarder/zone_records/: a.rs  aaaa.rs  caa.rs  cname.rs  dnskey.rs  ds.rs  https.rs  mod.rs  mx.rs  ns.rs  nsec.rs  ptr.rs  rrsig.rs  soa.rs  srv.rs  svcb.rs  txt.rs
src/livereload/: lib.rs
src/logging/: cidr.rs  config.rs  mod.rs  pipeline.rs
src/policy/: eval.rs  facts.rs  mod.rs  schema.rs  trace.rs
