[package]
name = "titaniumguard-dns"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "titaniumguard-dns"
path = "main.rs"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
opt-level = 3

[features]
default = ["recursion", "redis-cache", "audit-logging", "dot", "doh", "doq", "doh3", "mcp"]
dot = ["dep:rustls", "hickory-server/tls-ring"]
doh = [
    "dep:base64",
    "dep:bytes",
    "dep:h2",
    "dep:http",
    "dep:rustls",
    "dep:tokio-rustls",
    "hickory-server/https-ring",
]
doq = ["dep:rustls", "hickory-server/quic-ring"]
doh3 = ["dep:rustls", "hickory-server/h3-ring"]
recursion = ["dep:hickory-recursor", "hickory-recursor/dnssec-ring"]
redis-cache = ["dep:redis"]
audit-logging = ["dep:hex", "dep:hmac", "dep:libc", "dep:sha2"]
mcp = ["dep:axum", "dep:rmcp", "dep:tokio-util"]

[dependencies]
async-trait = { version = "0.1.89", default-features = false }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"], optional = true }
base64 = { version = "0.22.1", optional = true }
bytes = { version = "1.11.1", optional = true }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
h2 = { version = "0.4.14", default-features = false, features = ["stream"], optional = true }
hex = { version = "0.4.3", optional = true }
hickory-recursor = { version = "0.25.2", default-features = false, optional = true }
hickory-server = { version = "0.25.2", default-features = false }
hmac = { version = "0.13.0", default-features = false, optional = true }
http = { version = "1.4.1", default-features = false, optional = true }
libc = { version = "0.2.186", optional = true }
moka = { version = "0.12.15", default-features = false, features = ["future"] }
prometheus = { version = "0.14.0", default-features = false }
redis = { version = "1.2.2", default-features = false, features = ["tokio-comp"], optional = true }
regex = { version = "1.12.3", default-features = false, features = ["std"] }
rmcp = { version = "2.1.0", default-features = false, features = ["server", "macros", "transport-streamable-http-server"], optional = true }
rustls = { version = "0.23.40", default-features = false, features = ["std", "tls12", "logging", "ring"], optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
sha2 = { version = "0.11.0", default-features = false, optional = true }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "signal", "time", "fs"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "ring", "tls12"], optional = true }
tokio-util = { version = "0.7.17", default-features = false, optional = true }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "env-filter"] }
