[package]
name = "titaniumguard-dns"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Operations-focused DNS server with policy, recursion, caching, audit logging, and MCP support."
repository = "https://github.com/titaniumguardlabs/dns"
readme = "README.md"
keywords = ["dns", "resolver", "mcp"]
categories = ["network-programming"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
opt-level = 3

[features]
default = ["redis-cache", "audit-logging", "dot", "doh", "doq", "doh3", "dnscrypt", "mcp"]
dot = ["dep:rustls", "dep:tokio-rustls"]
doh = [
    "dep:bytes",
    "dep:h2",
    "dep:http",
    "dep:rustls",
    "dep:tokio-rustls",
]
doq = ["dep:quinn", "dep:rustls"]
doh3 = ["dep:bytes", "dep:h3", "dep:h3-quinn", "dep:http", "dep:quinn", "dep:rustls"]
dnscrypt = ["dep:chacha20", "dep:chacha20poly1305", "dep:getrandom", "dep:x25519-dalek"]
redis-cache = ["dep:redis"]
audit-logging = ["dep:hex", "dep:hmac"]
mcp = ["dep:axum", "dep:rmcp", "dep:tokio-util"]

[dependencies]
async-trait = { version = "0.1.89", default-features = false }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"], optional = true }
base64 = { version = "0.22.1" }
bytes = { version = "1.11.1", optional = true }
chacha20 = { version = "0.10.0", optional = true }
chacha20poly1305 = { version = "0.11.0", default-features = false, features = ["alloc", "getrandom"], optional = true }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
ed25519-dalek = { version = "3.0.0", default-features = false, features = ["alloc", "rand_core"] }
getrandom = { version = "0.4.3", optional = true }
h2 = { version = "0.4.14", default-features = false, features = ["stream"], optional = true }
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.13.0", default-features = false, optional = true }
http = { version = "1.4.1", default-features = false, optional = true }
h3 = { version = "0.0.8", default-features = false, optional = true }
h3-quinn = { version = "0.0.10", default-features = false, optional = true }
moka = { version = "0.12.15", default-features = false, features = ["future"] }
prometheus = { version = "0.14.0", default-features = false }
quinn = { version = "0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"], optional = true }
redis = { version = "1.2.2", default-features = false, features = ["tokio-comp"], optional = true }
regex = { version = "1.12.3", default-features = false, features = ["std"] }
rmcp = { version = "2.1.0", default-features = false, features = ["server", "macros", "transport-streamable-http-server"], optional = true }
rustls = { version = "0.23.40", default-features = false, features = ["std", "tls12", "logging", "ring"], optional = true }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
sha2 = { version = "0.11.0", default-features = false }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "signal", "time", "fs"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "ring", "tls12"], optional = true }
tokio-util = { version = "0.7.17", default-features = false, optional = true }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "env-filter"] }
x25519-dalek = { version = "3.0.0", default-features = false, features = ["static_secrets", "zeroize"], optional = true }

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]
